--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="end_tracking_at">End Tracking at</string>
     <string name="schedule_now">Schedule now</string>
     <string name="started_tracking">Started tracking tasks</string>
+    <string name="default_time">Schedule tracking at default hours of the day (7:00AM to 8:00 PM)</string>
+    <string name="manual_setting_prompt">Schedule tracking time manually below </string>
+    <string name="start_prompt"> Schedule tracking at above set times now</string>
+    <string name="cancel_prompt">Tracking is already on, cancel it now</string>
 <!--    <string name="stopped_tracking">Tracking will be stopped at</string>-->
 </resources>
